fix: add the overflow scroll for the container to avoid weird layout on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,10 @@ h1,h2,h2 {
     padding: 30px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+    display: flex;
+    overflow: auto;
+
 }
 
 /* .container--center{
@@ -234,6 +238,10 @@ h1,h2,h2 {
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%);
+
+    display: flex;
+    flex-direction: column;
+    min-height: min-content;
 }
 
 
